@@ -2,27 +2,29 @@ Package: madness
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"),
     email="shabbychef@gmail.com"))
-Version: 0.1.0.3000
+Version: 0.1.0.4000
 Date: 2016-01-12
 License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
 BugReports: https://github.com/shabbychef/madness/issues
 Description: An object that supports automatic differentiation
-    of matrix- and multidimensional-valued functions with 
-    respect to multidimensional independent variables. 
+    of matrix- and multidimensional-valued functions with
+    respect to multidimensional independent variables.
     Automatic differentiation is via 'forward accumulation'.
-Depends: 
+Depends:
     R (>= 3.0.2)
 Imports:
     matrixcalc,
     expm,
     methods
-Suggests: 
-    testthat, 
+Suggests:
+    testthat,
     knitr
 URL: https://github.com/shabbychef/madness
 Collate:
     'AllClass.r'
+    'utils.r'
+    'Ops.r'
     'bind.r'
     'blockrep.r'
     'coerce.r'
@@ -32,9 +34,9 @@ Collate:
     'elwise.r'
     'madness_pkg.r'
     'matwise.r'
+    'max.r'
     'norm.r'
     'numderiv.r'
-    'Ops.r'
     'reshape.r'
     'solve.r'
     'sum.r'
@@ -42,6 +44,6 @@ Collate:
     'theta.r'
     'trace.r'
     'twomoments.r'
-    'utils.r'
     'vcov.r'
     'vec.r'
+RoxygenNote: 5.0.0
